--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <section class="Apresentação">
         <div class="Apresentação-conteúdo">
-            <h2 class="Apresentação-título">Quem Somos</h2>
+            <h2 class="Apresentação-título">Quem Somos</2>
             <p class="Apresentação-parágrafo">Acreditamos que a matemática é para todos, e nosso objetivo é eliminar barreiras e tornar o aprendizado dessa disciplina uma experiência enriquecedora para pessoas de todas as idades e níveis de habilidade. Com uma abordagem inovadora e recursos cuidadosamente elaborados, estamos aqui para desmistificar conceitos complexos, proporcionar insights valiosos e inspirar uma paixão duradoura pela matemática.</p>
-            <p class="Apresentação-parágrafo">Navegue pelo nosso site para encontrar uma variedade de ferramentas, tutoriais e desafios projetados para ajudá-lo a dominar a matemática e alcançar seu pleno potencial. Seja bem-vindo ao [Nome do Site], onde a matemática se transforma em uma jornada emocionante e gratificante!</p>
+            <p class="Apresentação-parágrafo">Navegue pelo nosso  para encontrar uma variedade de ferramentas, tutoriais e desafios projetados para ajudá-lo a dominar a matemática e alcançar seu pleno potencial. Seja bem-vindo ao [Nome do Site], onde a matemática se transforma em uma jornada emocionante e gratificante!</p>
         </div>
         <img class="Apresentação-imagem" src="Mathematics-amico.png" alt="Colégio">
     </section>
